fix(swap): ensure Reset button is blue coloured in dark mode

--- a/ui/app/css/itcss/components/swap.scss
+++ b/ui/app/css/itcss/components/swap.scss
@@ -571,7 +571,7 @@
 
   &__gas-control-btn {
     font-size: 0.8rem;
-    color: #037dd6;
+    color: #2f9ae0 !important;
     cursor: pointer;
     padding-right: 7px;
   }
